--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 
-    "token": "OTg0NTM4ODU0MjM1MTc3MDIy.GHoIUc.N5Ly_rTbIEWHHwoPYkEZAar7dTyUzFfWdZYJWs",
+    "token": "",
 
     "prefix": ">"
 
