--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 
-    "token": "",
+    "token": "OTYwNzU4NzgxNTczMjI2NTY2.GnKbeL.TUlCeG4F80v9o_sB3Ifi9R7sZ0J_zjrj7KwcUs",
 
     "prefix": ">"
 
